src/parser/CHParser.py
# Generated from src/parser/CHParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CHParser ( Parser ):

    grammarFileName = "CHParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'func'", "'var'", "'const'", 
                     "'return'", "'class'", "'implement'", "'struct'", "'enum'", 
                     "'init'", "'deinit'", "'this'", "'static'", "'if'", 
                     "'else'", "'while'", "'for'", "'in'", "'public'", "'protected'", 
                     "'interface'", "'@optional'", "'with'", "'virtual'", 
                     "'override'", "'as'", "'using'", "'namespace'", "'endnamespace'", 
                     "'extern'", "'switch'", "'case'", "'default'", "'typedecl'", 
                     "'dyn'", "'@dynamic'", "'unique'", "'shared'", "'weak'", 
                     "'@make'", "'@make_shared'", "'@move'", "'@unsafe_move'", 
                     "'@codegen_property_injector'", "'static_cast'", "'reinterpret_cast'", 
                     "'const_cast'", "'~>'", "<INVALID>", "'new'", "'delete'", 
                     "'@cpp'", "'=='", "'!='", "'<='", "'>='", "'::'", "'->'", 
                     "'&&'", "'||'", "'<<'", "'>>'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'<'", "'>'", "'!'", "'&'", "'|'", "'^'", "'~'", "';'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "'='", 
                     "'.'", "','", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'@end'" ]

    symbolicNames = [ "<INVALID>", "IMPORT", "FUNC", "VAR", "CONST", "RETURN", 
                      "CLASS", "IMPLEMENT", "STRUCT", "ENUM", "INIT", "DEINIT", 
                      "THIS", "STATIC", "IF", "ELSE", "WHILE", "FOR", "IN", 
                      "PUBLIC", "PROTECTED", "INTERFACE", "AT_OPTIONAL", 
                      "IMPL", "VIRTUAL", "OVERRIDE", "AS", "USING", "NAMESPACE", 
                      "END_NAMESPACE", "EXTERN", "SWITCH", "CASE", "DEFAULT", 
                      "TYPEDECL", "DYN", "AT_DYNAMIC", "UNIQUE_KW", "SHARED_KW", 
                      "WEAK_KW", "AT_MAKE_UNIQUE", "AT_MAKE_SHARED", "AT_MOVE", 
                      "AT_UNSAFE_MOVE", "AT_CODEGEN_INJECTOR", "STATIC_CAST", 
                      "REINTERPRET_CAST", "CONST_CAST", "TILDE_ARROW", "BOOL_LITERAL", 
                      "NEW", "DELETE", "AT_CPP", "EQ", "NEQ", "LTE", "GTE", 
                      "COLON_COLON", "ARROW", "AND_OP", "OR_OP", "LSHIFT", 
                      "RSHIFT", "PLUS", "MINUS", "STAR", "SLASH", "MODULO", 
                      "PLUS_ASSIGN", "MINUS_ASSIGN", "STAR_ASSIGN", "SLASH_ASSIGN", 
                      "MOD_ASSIGN", "LT", "GT", "NOT_OP", "BIT_AND", "BIT_OR", 
                      "BIT_XOR", "BIT_NOT", "SEMIC_TOKEN", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COLON", "ASSIGN", 
                      "DOT", "COMMA", "HEX_LITERAL", "BINARY_LITERAL", "OCTAL_LITERAL", 
                      "FLOAT_LITERAL", "DECIMAL_LITERAL", "BYTE_LITERAL", 
                      "U8_STRING_LITERAL", "U_STRING_LITERAL", "U_STRING_LITERAL_CAP", 
                      "L_STRING_LITERAL_CAP", "IDENTIFIER", "C_STRING_LITERAL", 
                      "STRING_LITERAL", "CHAR_LITERAL", "CPP_DIRECTIVE", 
                      "LINE_COMMENT", "WHITESPACE", "NEWLINE", "AT_END", 
                      "CPP_BODY" ]

    RULE_typeSpecifier = 0
    RULE_baseType = 1
    RULE_typeList = 2
    RULE_variableDeclaration = 3
    RULE_templateArgument = 4
    RULE_qualifiedIdentifier = 5
    RULE_namespaceStatement = 6
    RULE_program = 7
    RULE_topLevelImport = 8
    RULE_topLevelStatement = 9
    RULE_forwardDeclaration = 10
    RULE_accessModifier = 11
    RULE_endNamespaceStatement = 12
    RULE_initSignature = 13
    RULE_deinitSignature = 14
    RULE_classBodyStatement = 15
    RULE_classDefinition = 16
    RULE_implementationBlock = 17
    RULE_structDefinition = 18
    RULE_structBodyStatement = 19
    RULE_enumDefinition = 20
    RULE_enumBody = 21
    RULE_enumItem = 22
    RULE_functionSignature = 23
    RULE_methodDefinition = 24
    RULE_initDefinition = 25
    RULE_deinitBlock = 26
    RULE_includeHeaderContent = 27
    RULE_importDirective = 28
    RULE_usingAlias = 29
    RULE_functionDefinition = 30
    RULE_parameters = 31
    RULE_parameter = 32
    RULE_cppBlock = 33
    RULE_returnStatement = 34
    RULE_assignmentOperator = 35
    RULE_assignment = 36
    RULE_assignableExpression = 37
    RULE_assignablePrimary = 38
    RULE_ifStatement = 39
    RULE_ifBlock = 40
    RULE_elseBlock = 41
    RULE_whileStatement = 42
    RULE_statement = 43
    RULE_blockStatement = 44
    RULE_caseBlock = 45
    RULE_defaultBlock = 46
    RULE_switchStatement = 47
    RULE_deleteStatement = 48
    RULE_forRangeDeclaration = 49
    RULE_forStatement = 50
    RULE_forInit = 51
    RULE_forIncrement = 52
    RULE_methodSignature = 53
    RULE_interfaceDefinition = 54
    RULE_variableDeclaration_no_semicolon = 55
    RULE_assignment_no_semicolon = 56
    RULE_baseInitializer = 57
    RULE_expression = 58
    RULE_unaryExpression = 59
    RULE_castExpression = 60
    RULE_simpleExpression = 61
    RULE_primary = 62
    RULE_initializerList = 63
    RULE_functionCallExpression = 64
    RULE_expressionList = 65
    RULE_literal = 66

    ruleNames =  [ "typeSpecifier", "baseType", "typeList", "variableDeclaration", 
                   "templateArgument", "qualifiedIdentifier", "namespaceStatement", 
                   "program", "topLevelImport", "topLevelStatement", "forwardDeclaration", 
                   "accessModifier", "endNamespaceStatement", "initSignature", 
                   "deinitSignature", "classBodyStatement", "classDefinition", 
                   "implementationBlock", "structDefinition", "structBodyStatement", 
                   "enumDefinition", "enumBody", "enumItem", "functionSignature", 
                   "methodDefinition", "initDefinition", "deinitBlock", 
                   "includeHeaderContent", "importDirective", "usingAlias", 
                   "functionDefinition", "parameters", "parameter", "cppBlock", 
                   "returnStatement", "assignmentOperator", "assignment", 
                   "assignableExpression", "assignablePrimary", "ifStatement", 
                   "ifBlock", "elseBlock", "whileStatement", "statement", 
                   "blockStatement", "caseBlock", "defaultBlock", "switchStatement", 
                   "deleteStatement", "forRangeDeclaration", "forStatement", 
                   "forInit", "forIncrement", "methodSignature", "interfaceDefinition", 
                   "variableDeclaration_no_semicolon", "assignment_no_semicolon", 
                   "baseInitializer", "expression", "unaryExpression", "castExpression", 
                   "simpleExpression", "primary", "initializerList", "functionCallExpression", 
                   "expressionList", "literal" ]

    EOF = Token.EOF
    IMPORT=1
    FUNC=2
    VAR=3
    CONST=4
    RETURN=5
    CLASS=6
    IMPLEMENT=7
    STRUCT=8
    ENUM=9
    INIT=10
    DEINIT=11
    THIS=12
    STATIC=13
    IF=14
    ELSE=15
    WHILE=16
    FOR=17
    IN=18
    PUBLIC=19
    PROTECTED=20
    INTERFACE=21
    AT_OPTIONAL=22
    IMPL=23
    VIRTUAL=24
    OVERRIDE=25
    AS=26
    USING=27
    NAMESPACE=28
    END_NAMESPACE=29
    EXTERN=30
    SWITCH=31
    CASE=32
    DEFAULT=33
    TYPEDECL=34
    DYN=35
    AT_DYNAMIC=36
    UNIQUE_KW=37
    SHARED_KW=38
    WEAK_KW=39
    AT_MAKE_UNIQUE=40
    AT_MAKE_SHARED=41
    AT_MOVE=42
    AT_UNSAFE_MOVE=43
    AT_CODEGEN_INJECTOR=44
    STATIC_CAST=45
    REINTERPRET_CAST=46
    CONST_CAST=47
    TILDE_ARROW=48
    BOOL_LITERAL=49
    NEW=50
    DELETE=51
    AT_CPP=52
    EQ=53
    NEQ=54
    LTE=55
    GTE=56
    COLON_COLON=57
    ARROW=58
    AND_OP=59
    OR_OP=60
    LSHIFT=61
    RSHIFT=62
    PLUS=63
    MINUS=64
    STAR=65
    SLASH=66
    MODULO=67
    PLUS_ASSIGN=68
    MINUS_ASSIGN=69
    STAR_ASSIGN=70
    SLASH_ASSIGN=71
    MOD_ASSIGN=72
    LT=73
    GT=74
    NOT_OP=75
    BIT_AND=76
    BIT_OR=77
    BIT_XOR=78
    BIT_NOT=79
    SEMIC_TOKEN=80
    LPAREN=81
    RPAREN=82
    LBRACE=83
    RBRACE=84
    LBRACK=85
    RBRACK=86
    COLON=87
    ASSIGN=88
    DOT=89
    COMMA=90
    HEX_LITERAL=91
    BINARY_LITERAL=92
    OCTAL_LITERAL=93
    FLOAT_LITERAL=94
    DECIMAL_LITERAL=95
    BYTE_LITERAL=96
    U8_STRING_LITERAL=97
    U_STRING_LITERAL=98
    U_STRING_LITERAL_CAP=99
    L_STRING_LITERAL_CAP=100
    IDENTIFIER=101
    C_STRING_LITERAL=102
    STRING_LITERAL=103
    CHAR_LITERAL=104
    CPP_DIRECTIVE=105
    LINE_COMMENT=106
    WHITESPACE=107
    NEWLINE=108
    AT_END=109
    CPP_BODY=110

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TypeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.params = None # TypeListContext
            self.returnType = None # TypeSpecifierContext
            self.nested = None # TypeSpecifierContext

        def LBRACK(self):
            return self.getToken(CHParser.LBRACK, 0)

        def typeSpecifier(self):
            return self.getTypedRuleContext(CHParser.TypeSpecifierContext,0)


        def SEMIC_TOKEN(self):
            return self.getToken(CHParser.SEMIC_TOKEN, 0)

        def expression(self):
            return self.getTypedRuleContext(CHParser.ExpressionContext,0)


        def RBRACK(self):
            return self.getToken(CHParser.RBRACK, 0)

        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(CHParser.STAR)
            else:
                return self.getToken(CHParser.STAR, i)

        def BIT_AND(self, i:int=None):
            if i is None:
                return self.getTokens(CHParser.BIT_AND)
            else:
                return self.getToken(CHParser.BIT_AND, i)

        def baseType(self):
            return self.getTypedRuleContext(CHParser.BaseTypeContext,0)


        def LT(self):
            return self.getToken(CHParser.LT, 0)

        def typeList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CHParser.TypeListContext)
            else:
                return self.getTypedRuleContext(CHParser.TypeListContext,i)


        def GT(self):
            return self.getToken(CHParser.GT, 0)

        def LPAREN(self):
            return self.getToken(CHParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CHParser.RPAREN, 0)

        def ARROW(self):
            return self.getToken(CHParser.ARROW, 0)

        def getRuleIndex(self):
            return CHParser.RULE_typeSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpecifier" ):
                listener.enterTypeSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpecifier" ):
                listener.exitTypeSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpecifier" ):
                return visitor.visitTypeSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def typeSpecifier(self):

        localctx = CHParser.TypeSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_typeSpecifier)
        self._la = 0 # Token type
        try:
            self.state = 184
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [85]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.match(CHParser.LBRACK)
                self.state = 135
                self.typeSpecifier()
                self.state = 136
                self.match(CHParser.SEMIC_TOKEN)
                self.state = 137
                self.expression()
                self.state = 138
                self.match(CHParser.RBRACK)
                self.state = 143
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 140
                        _la = self._input.LA(1)
                        if not(_la==65 or _la==76):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 145
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                pass
            elif token in [35, 37, 38, 39, 101]:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.baseType()
                self.state = 151
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 147
                    self.match(CHParser.LT)
                    self.state = 148
                    self.typeList()
                    self.state = 149
                    self.match(CHParser.GT)


                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==81:
                    self.state = 153
                    self.match(CHParser.LPAREN)
                    self.state = 155
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 563946385833984) != 0) or ((((_la - 81)) & ~0x3f) == 0 and ((1 << (_la - 81)) & 16776209) != 0):
                        self.state = 154
                        self.typeList()


                    self.state = 157
                    self.match(CHParser.RPAREN)


                self.state = 163
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 160
                        _la = self._input.LA(1)
                        if not(_la==65 or _la==76):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 165
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass
            elif token in [81]:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.match(CHParser.LPAREN)
                self.state = 176
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 563946385833984) != 0) or ((((_la - 81)) & ~0x3f) == 0 and ((1 << (_la - 81)) & 16776209) != 0):
                        self.state = 167
                        localctx.params = self.typeList()


                    self.state = 170
                    self.match(CHParser.RPAREN)
                    self.state = 171
                    self.match(CHParser.ARROW)
                    self.state = 172
                    localctx.returnType = self.typeSpecifier()
                    pass

                elif la_ == 2:
                    self.state = 173
                    localctx.nested = self.typeSpecifier()
                    self.state = 174
                    self.match(CHParser.RPAREN)
                    pass


                self.state = 181
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 178
                        _la = self._input.LA(1)
                        if not(_la==65 or _la==76):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 183
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNIQUE_KW(self):
            return self.getToken(CHParser.UNIQUE_KW, 0)

        def SHARED_KW(self):
            return self.getToken(CHParser.SHARED_KW, 0)

        def WEAK_KW(self):
            return self.getToken(CHParser.WEAK_KW, 0)

        def DYN(self):
            return self.getToken(CHParser.DYN, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(CHParser.IDENTIFIER)
            else:
                return self.getToken(CHParser.IDENTIFIER, i)
